Added Delete Functionality

--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -260,9 +260,11 @@
           //$('#eventTable').append('<tr><td>'+name+'</td><td>'+address+' '+city+' '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td></tr>');
           $('#eventTable').append('<tr><td>'+name+'</td><td>'+date+'</td><td>'+address+': '+city+', '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td><td>'
                 +'<button id=temp type="button" class="btn btn-default" onclick="editCol(this.id)" aria-label="Left Align" data-toggle="modal" data-target="#ModalCenter2"\> <span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button\>'
-                +'<button type="button" class="btn btn-default" aria-label="trash"\><span class="glyphicon glyphicon-trash" aria-hidden="true"\></span\></button\>'
+                +'<button id=delete type="button" class="btn btn-default" onclick="delEvent(this.id)" aria-label="trash"\><span class="glyphicon glyphicon-trash" aria-hidden="true"\></span\></button\>'
                     +'</td></tr>');
            document.getElementById("temp").setAttribute('id', name);
+           var name2 = name + '1'
+           document.getElementById("delete").setAttribute('id', name2);
           //start();
         });
       });
@@ -354,9 +356,11 @@
             //insert element into the table
             $('#eventTable').append('<tr><td>'+name+'</td><td>'+date+'</td><td>'+address+': '+city+', '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td><td>'
                 +'<button id=temp type="button" class="btn btn-default" onclick="editCol(this.id)" aria-label="Left Align data-toggle="modal"data-target="#ModalCenter2""\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
-                +'<button type="button" class="btn btn-default" aria-label="trash"\><span class="glyphicon glyphicon-trash" aria-hidden="true"\></span\></button\>'
+                +'<button id=delete type="button" class="btn btn-default" onclick="delEvent(this.id)" aria-label="trash"\><span class="glyphicon glyphicon-trash" aria-hidden="true"\></span\></button\>'
                        +'</td></tr>');
             document.getElementById("temp").setAttribute('id', name);
+            var name2 = name + '1'
+            document.getElementById("delete").setAttribute('id', name2);
 
 //code for button to edit
             //glyphicon glyphicon-edit
@@ -399,6 +403,39 @@
         //ref.push(data);
       });
         }
+        function delEvent(clicked_id){
+          var key;
+          var ref = firebase.database().ref('users');
+          var email = localStorage.getItem("email");
+          //console.log(email);
+          ref.once('value', function(snapshot) {
+          snapshot.forEach(function(childSnapshot) {
+          var childKey = childSnapshot.key;
+          var childData = childSnapshot.val();
+          //console.log(childData["email"]);
+          if( childData["email"] === email) {
+            key = childKey;
+            //console.log(key);
+          }
+        });
+      }).then((res) => {
+        var eRef = firebase.database().ref('users/'+ key + '/events/');
+        eRef.once('value', function(snapshot) {
+        snapshot.forEach(function(childSnapshot) {
+        var childData = childSnapshot.val();
+        var check = childData["name"];
+        check = check + "1";
+        //console.log(check);
+        if(check === clicked_id) {
+          var nRef = firebase.database().ref('users/'+ key + '/events/' + childData["name"]);
+          //console.log(childData["name"]);
+          nRef.remove();
+          window.location.replace("homepage.html");
+        }
+      });
+    });
+      })
+        }
         function editCol(clicked_id){
             //$('td').prop('contenteditable',true);
             //console.log($('td'));
@@ -421,14 +458,13 @@
           var eRef = firebase.database().ref('users/'+ key + '/events/');
           eRef.once('value', function(snapshot) {
           snapshot.forEach(function(childSnapshot) {
-          var childKey = childSnapshot.key;
           var childData = childSnapshot.val();
-          console.log(clicked_id);
-          console.log(childData["name"]);
+          //console.log(clicked_id);
+          //console.log(childData["name"]);
 
           //console.log(childData["email"]);
           if( childData["name"] === clicked_id) {
-            console.log("flag");
+            //console.log("flag");
             var name =  childData["name"];
             var address = childData["address"];
             var city = childData["city"];
