--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -259,15 +259,9 @@
           var reminder = childData["reminder"];
           //$('#eventTable').append('<tr><td>'+name+'</td><td>'+address+' '+city+' '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td></tr>');
           $('#eventTable').append('<tr><td>'+name+'</td><td>'+date+'</td><td>'+address+': '+city+', '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td><td>'
-<<<<<<< HEAD
-                +'<button id=temp type="button" class="btn btn-default" onclick="editCol(this.id)" aria-label="Left Align" data-toggle="modal" data-target="#ModalCenter2"\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
-                     +'</td></tr>');
-           document.getElementById("temp").setAttribute('id', name);
-=======
                 +'<button id=name type="button" class="btn btn-default" onclick="editCol(this.id)" aria-label="Left Align" data-toggle="modal" data-target="#ModalCenter2"\> <span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button\>'
                 +'<button type="button" class="btn btn-default" aria-label="trash"\><span class="glyphicon glyphicon-trash" aria-hidden="true"\></span\></button\>'
                     +'</td></tr>');
->>>>>>> a575684e6cdf0a67e941180dc4d5217e1ddd95bc
           //start();
         });
       });
@@ -358,15 +352,9 @@
 
             //insert element into the table
             $('#eventTable').append('<tr><td>'+name+'</td><td>'+date+'</td><td>'+address+': '+city+', '+state+' '+zip+'</td><td>'+eTime+'</td><td>'+reminder+'</td><td>'
-<<<<<<< HEAD
-                +'<button id=temp type="button" class="btn btn-default" onclick="editCol(this.id)" aria-label="Left Align data-toggle="modal"data-target="#ModalCenter2""\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
-                     +'</td></tr>');
-            document.getElementById("temp").setAttribute('id', name);
-=======
                 +'<button id=name type="button" class="btn btn-default" onclick="editCol(this.id)" aria-label="Left Align data-toggle="modal"data-target="#ModalCenter2""\><span class="glyphicon glyphicon-edit" aria-hidden="true"\></span\></button>'
                     + +'<button type="button" class="btn btn-default" aria-label="trash"\><span class="glyphicon glyphicon-trash" aria-hidden="true"\></span\></button\>'
                     +'</td></tr>');
->>>>>>> a575684e6cdf0a67e941180dc4d5217e1ddd95bc
             //code for button to edit
             //glyphicon glyphicon-edit
             /*<button type="button" class="btn btn-default" aria-label="Left Align">
@@ -410,13 +398,8 @@
         }
         function editCol(clicked_id){
             //$('td').prop('contenteditable',true);
-<<<<<<< HEAD
-            //console.log($('td'));
-            //console.log($('td').text());
-=======
             console.log($('td'));
             console.log($('td').text());
->>>>>>> a575684e6cdf0a67e941180dc4d5217e1ddd95bc
 
             var key;
             var ref = firebase.database().ref('users');
@@ -480,16 +463,14 @@
 			
 			var MS_PER_MINUTE = 60000
 			//var myStartDate = new Date(myEndDateStime - durationInMinutes * MS_PER_MINUTE);
-
+			var schedule= "<%= schedule %>"
 			var splitDate = date.split("/");
-			var splitTime = eTime.split(/:| /);
+			var splitTime = eTime.split(":");
 			var tfTime = parseInt(splitTime[0],10);
-			if(splitTime[3] =="pm"){
-				tfTime = +tfTime + 12;
-				splitTime[0] = tfTime;
-			}
-			//var j = 
-			window.alert(tfTime);
+			var d = new Date(date +" "+ eTime);
+			var j = schedule.scheduleJob(d,function(){
+			window.alert(d);
+			});
 
 }
 			
