--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -19,7 +19,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <div class="container">
-            <h2>Project Name</h2>
+            <h2>MyRemind</h2>
             <p>We remember so you dont have to</p>
         </div>
     </head>
