Added Basic CSS to Login Page

--- a/Html docs/Login.html
+++ b/Html docs/Login.html
@@ -10,8 +10,8 @@
 <title>Page Title</title>
 </head>
 <body>
-<div class="container">
-	<div class="jumbotron">
+<div class="container" id="cont">
+	<div class="jumbotron" id="jumbo">
 		<h1>MyRemind</h1>
 		<p>We remember so you dont have to</p>
 	</div>
@@ -132,4 +132,15 @@ function resetPassword(){
 </script>
 
 </body>
+<style>
+  body {
+    background-color: #99e6ff;
+  }
+  #jumbo {
+    background-color: #b3ffb3;
+  }
+  #cont {
+    background-color: #ffb3d9;
+  }
+</style>
 </html>
