--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -521,7 +521,7 @@
             var email = localStorage.getItem("email");
 			//var j = schedule.scheduleJob(d,function(){
 			window.alert(d);
-			$.post("http://localhost:8080/remindersubmit",{d: d, email: email},function(data){
+			$.post("http://localhost:8080/remindersubmit",{"d": d, "email": email},function(data){
 				if(data=='done'){
 					alert('submitted');
 				}
