--- a/Html docs/CreateAccount.html
+++ b/Html docs/CreateAccount.html
@@ -21,7 +21,7 @@
   <button type="button" id="back-button" class="btn btn-default" onclick="backToLogin()"aria-label="Left Align">
       <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
   </button>
-<div class="container">
+<div class="container" id="cont">
 
 		<h1>New Account</h1>
 		<p>Please enter your Email Address and Password</p>
@@ -126,4 +126,12 @@ function backToLogin(){
 </script>
 
 </body>
+<style>
+  body {
+    background-color: #99e6ff;
+  }
+  #cont {
+    background-color: #b3ffe0;
+  }
+</style>
 </html>
