--- a/Html docs/Login.html
+++ b/Html docs/Login.html
@@ -137,7 +137,7 @@ function resetPassword(){
     background-color: #99e6ff;
   }
   #jumbo {
-    background-color: #b3ffb3;
+    background-color: #b3ffe0;
   }
   #cont {
     background-color: #ffb3d9;
