--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <div class="container">
+        <div class="container" id="cont">
             <h2>MyRemind</h2>
             <p>We remember so you dont have to</p>
         </div>
@@ -522,4 +522,12 @@
             })
         </script>
     </body>
+    <style>
+      body {
+        background-color: #99c2ff;
+      }
+      #cont {
+        background-color: #99c2ff;
+      }
+    </style>
 </html>
