--- a/Html docs/CreateAccount.html
+++ b/Html docs/CreateAccount.html
@@ -22,10 +22,10 @@
       <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
   </button>
 <div class="container" id="cont">
-
-		<h1>New Account</h1>
+<div class="jumbotron" id="jumbo">
+    <h1>New Account</h1>
 		<p>Please enter your Email Address and Password</p>
-
+</div>
 </div>
 <div class="container">
 	<form class="form-inline">
@@ -127,11 +127,12 @@ function backToLogin(){
 
 </body>
 <style>
-  body {
+  /*body {
     background-color: #99e6ff;
-  }
-  #cont {
-    background-color: #b3ffe0;
+  }*/
+  #jumbo {
+    /*background-color: #b3ffe0;*/
+    background-color: #99e6ff;
   }
 </style>
 </html>
