--- a/Html docs/Login.html
+++ b/Html docs/Login.html
@@ -133,14 +133,17 @@ function resetPassword(){
 
 </body>
 <style>
-  body {
+  /*body {
     background-color: #99e6ff;
-  }
+  }*/
   #jumbo {
-    background-color: #b3ffe0;
+    background-color: #99e6ff;
+    
   }
-  #cont {
+  /*#b3ffe0;*/
+
+  /*#cont {
     background-color: #ffb3d9;
-  }
+  }*/
 </style>
 </html>
