--- a/Html docs/homepage.html
+++ b/Html docs/homepage.html
@@ -102,18 +102,18 @@
                                     <label for="inputReminderTime"> Reminder Time: </label> <!--Event time -->
                                     <select id="inputReminderTime" class="form-control">
                                         <option selected>Event Time</option>
-                                        <option>12:00 am</option> <option>12:30 am</option> <option>01:00 am</option> <option>01:30 am</option>
-                                        <option>02:00 am</option> <option>02:30 am</option> <option>03:00 am</option> <option>03:30 am</option>
-                                        <option>04:00 am</option> <option>04:30 am</option> <option>05:00 am</option> <option>05:30 am</option>
-                                        <option>06:00 am</option> <option>06:30 am</option> <option>07:00 am</option> <option>07:30 am</option>
-                                        <option>08:00 am</option> <option>08:30 am</option> <option>09:00 am</option> <option>09:30 am</option>
-                                        <option>10:00 am</option> <option>10:30 am</option> <option>11:00 am</option> <option>11:30 am</option>
-                                        <option>12:00 pm</option> <option>12:30 pm</option> <option>01:00 pm</option> <option>01:30 pm</option>
-                                        <option>02:00 pm</option> <option>02:30 pm</option> <option>03:00 pm</option> <option>03:30 pm</option>
-                                        <option>04:00 pm</option> <option>04:30 pm</option> <option>05:00 pm</option> <option>05:30 pm</option>
-                                        <option>06:00 pm</option> <option>06:30 pm</option> <option>07:00 pm</option> <option>07:30 pm</option>
-                                        <option>08:00 pm</option> <option>08:30 pm</option> <option>09:00 pm</option> <option>09:30 pm</option>
-                                        <option>10:00 pm</option> <option>10:30 pm</option> <option>11:00 pm</option> <option>11:30 pm</option>
+                                        <option>00:00</option> <option>00:30</option> <option>01:00</option> <option>01:30</option>
+                                    <option>02:00</option> <option>02:30</option> <option>03:00</option> <option>03:30</option>
+                                    <option>04:00</option> <option>04:30</option> <option>05:00</option> <option>05:30</option>
+                                    <option>06:00</option> <option>06:30</option> <option>07:00</option> <option>07:30</option>
+                                    <option>08:00</option> <option>08:30</option> <option>09:00</option> <option>09:30</option>
+                                    <option>10:00</option> <option>10:30</option> <option>11:00</option> <option>11:30</option>
+                                    <option>12:00</option> <option>12:30</option> <option>13:00</option> <option>13:30</option>
+                                    <option>14:00</option> <option>14:30</option> <option>15:00</option> <option>15:30</option>
+                                    <option>16:00</option> <option>16:30</option> <option>17:00</option> <option>17:30</option>
+                                    <option>18:00</option> <option>18:30</option> <option>19:00</option> <option>19:30</option>
+                                    <option>20:00</option> <option>20:30</option> <option>21:00</option> <option>21:30</option>
+                                    <option>22:00</option> <option>22:30</option> <option>23:00</option> <option>23:30</option>
                                     </select>
                                 </div>
                             </div>
